--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
         android:contentDescription="@string/icon_favorite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier2"
-        tools:srcCompat="@sample/posts.json/data/iconFavorite" />
+        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
 
     <TextView
         android:id="@+id/favoriteCounts"
@@ -110,7 +110,7 @@
         android:background="@android:color/transparent"
         app:layout_constraintStart_toEndOf="@id/favoriteCounts"
         app:layout_constraintTop_toBottomOf="@id/barrier2"
-        tools:srcCompat="@sample/posts.json/data/iconShare"
+        app:srcCompat="@drawable/ic_baseline_share_24"
         android:contentDescription="@string/icon_share" />
 
     <TextView
@@ -133,7 +133,7 @@
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toStartOf="@id/visibilityCounts"
         app:layout_constraintTop_toBottomOf="@id/barrier2"
-        tools:srcCompat="@sample/posts.json/data/iconVisibility"
+        app:srcCompat="@drawable/ic_baseline_visibility_24"
         android:contentDescription="@string/icon_visibility" />
 
     <TextView
@@ -155,7 +155,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/favorite"
-        tools:srcCompat="@sample/posts.json/data/endLine"
+        tools:srcCompat="@drawable/ic_line"
         android:contentDescription="@string/end_line" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
