--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -6,22 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".activity.EditPostActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:background="@color/colorPrimary"
+        android:layout_gravity="bottom"
+        />
+
+
     <EditText
         android:id="@+id/contentEditText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
         android:background="@android:color/transparent"
-        />
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
-        />
+        android:gravity="start"
+        android:layout_gravity="fill_vertical"
+        android:inputType="textMultiLine" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/ok"
@@ -29,32 +30,20 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/description_post_save"
         app:srcCompat="@drawable/ic_baseline_check_24"
-        app:layout_anchor="@id/bottomAppBar"
+        app:layout_anchor="@id/toolbar"
+        android:layout_marginStart="120dp"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/description_post_save"
+        app:srcCompat="@drawable/ic_baseline_clear_24"
+        android:layout_marginStart="240dp"
+
+        app:layout_anchor="@id/toolbar"
+
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--    xmlns:tools="http://schemas.android.com/tools"-->
-    <!--    android:layout_width="match_parent"-->
-    <!--    android:layout_height="match_parent"-->
-    <!--    tools:context=".activity.EditPostActivity">-->
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/contentEditText"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="0dp"-->
-    <!--        android:background="@android:color/transparent"-->
-    <!--        android:hint="@string/post_text"-->
-    <!--        android:importantForAutofill="no"-->
-    <!--        android:inputType="textMultiLine"-->
-    <!--        android:padding="@dimen/common_spacing"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="1.0"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
