--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -14,7 +14,6 @@
         android:layout_gravity="bottom"
         />
 
-
     <EditText
         android:id="@+id/contentEditText"
         android:layout_width="match_parent"
@@ -22,7 +21,9 @@
         android:background="@android:color/transparent"
         android:gravity="start"
         android:layout_gravity="fill_vertical"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:autofillHints=""
+        tools:ignore="LabelFor" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/ok"
@@ -38,12 +39,10 @@
         android:id="@+id/cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/description_post_save"
+        android:contentDescription="@string/description_post_cancel"
         app:srcCompat="@drawable/ic_baseline_clear_24"
         android:layout_marginStart="240dp"
-
         app:layout_anchor="@id/toolbar"
-
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
