--- a/app/src/main/res/layout/fragment_edit_post.xml
+++ b/app/src/main/res/layout/fragment_edit_post.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.EditPostActivity">
+    tools:context=".activity.EditPostFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_height="50dp"
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
-        android:layout_gravity="bottom"
-        />
+        android:layout_gravity="bottom" />
 
     <EditText
         android:id="@+id/contentEditText"
@@ -32,8 +31,7 @@
         android:contentDescription="@string/description_post_save"
         app:srcCompat="@drawable/ic_baseline_check_24"
         app:layout_anchor="@id/toolbar"
-        android:layout_marginStart="120dp"
-        />
+        android:layout_marginStart="120dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/cancel"
@@ -42,7 +40,6 @@
         android:contentDescription="@string/description_post_cancel"
         app:srcCompat="@drawable/ic_baseline_clear_24"
         android:layout_marginStart="240dp"
-        app:layout_anchor="@id/toolbar"
-        />
+        app:layout_anchor="@id/toolbar" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
