--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -13,10 +13,22 @@
         <action
             android:id="@+id/action_feedFragment_to_editPostFragment"
             app:destination="@id/editPostFragment" />
+        <action
+            android:id="@+id/action_feedFragment_to_ownPostFragment"
+            app:destination="@id/ownPostFragment" />
     </fragment>
     <fragment
         android:id="@+id/editPostFragment"
         android:name="ru.netology.nmedia.activity.EditPostFragment"
         android:label="fragment_edit_post"
         tools:layout="@layout/fragment_edit_post" />
+    <fragment
+        android:id="@+id/ownPostFragment"
+        android:name="ru.netology.nmedia.activity.OwnPostFragment"
+        android:label="fragment_own_post"
+        tools:layout="@layout/fragment_own_post" >
+        <action
+            android:id="@+id/action_ownPostFragment_to_editPostFragment"
+            app:destination="@id/editPostFragment" />
+    </fragment>
 </navigation>
