--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -72,21 +72,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier"
-        app:layout_constraintBottom_toTopOf="@id/playVideoView"
+        app:layout_constraintBottom_toTopOf="@id/attachmentImageView"
         tools:text="@sample/posts.json/data/content" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/playVideoView"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toTopOf="@id/barrier2"
+    <ImageView
+        android:id="@+id/attachmentImageView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/barrier2"
         app:layout_constraintTop_toBottomOf="@id/contentTextView"
-        app:icon="@drawable/ic_baseline_play_arrow_24"
-        android:text="@string/play_video"
-        android:textColor="#ffffff"
-        android:visibility="visible"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        android:contentDescription="@string/attachment" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier2"
