--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorEndLine">#EB236B</color>
     <color name="isLiked">#ff0000</color>
+    <color name="divider_color">#ccc</color>
 </resources>
