--- a/app/src/main/res/layout/fragment_own_post.xml
+++ b/app/src/main/res/layout/fragment_own_post.xml
@@ -91,7 +91,7 @@
             app:icon="@drawable/ic_baseline_play_arrow_24"
             android:text="@string/play_video"
             android:textColor="#ffffff"
-            android:visibility="visible"
+            android:visibility="gone"
             />
 
         <androidx.constraintlayout.widget.Barrier
