--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorEndLine">#EB236B</color>
     <color name="isLiked">#ff0000</color>
     <color name="divider_color">#ccc</color>
+    <color name="black">#000000</color>
+
 </resources>
